@@ -223,25 +223,7 @@ class Git(VersionControl):
         if not repo:
             return None
         current_rev = self.get_revision(location)
-        refs = self.get_short_refs(location)
-        # refs maps names to commit hashes; we need the inverse
-        # if multiple names map to a single commit, we pick the first one
-        # alphabetically
-        names_by_commit = {}
-        for ref, commit in sorted(refs.items()):
-            if commit not in names_by_commit:
-                names_by_commit[commit] = ref
-
-        if current_rev in names_by_commit:
-            # It's a tag or branch.
-            name = names_by_commit[current_rev]
-            full_egg_name = (
-                '%s-%s' % (egg_project_name, self.translate_egg_surname(name))
-            )
-        else:
-            full_egg_name = '%s-dev' % egg_project_name
-
-        req = '%s@%s#egg=%s' % (repo, current_rev, full_egg_name)
+        req = '%s@%s#egg=%s' % (repo, current_rev, egg_project_name)
         subdirectory = self._get_subdirectory(location)
         if subdirectory:
             req += '&subdirectory=' + subdirectory
