@@ -76,7 +76,7 @@ def test_freeze_svn(script, tmpdir):
     )
     result = script.pip('freeze', expect_stderr=True)
     expected = textwrap.dedent("""\
-        ...-e svn+...#egg=version_pkg-0.1-...
+        ...-e svn+...#egg=version_pkg
         ...""")
     _check_output(result.stdout, expected)
 
@@ -102,7 +102,7 @@ def test_freeze_git_clone(script, tmpdir):
     result = script.pip('freeze', expect_stderr=True)
     expected = textwrap.dedent(
         """
-            ...-e git+...#egg=version_pkg-master
+            ...-e git+...#egg=version_pkg
             ...
         """
     ).strip()
@@ -115,7 +115,7 @@ def test_freeze_git_clone(script, tmpdir):
     expected = textwrap.dedent(
         """
             -f %(repo)s#egg=pip_test_package...
-            -e git+...#egg=version_pkg-master
+            -e git+...#egg=version_pkg
             ...
         """ % {'repo': repo_dir},
     ).strip()
@@ -137,7 +137,7 @@ def test_freeze_git_clone(script, tmpdir):
     result = script.pip('freeze', expect_stderr=True)
     expected = textwrap.dedent(
         """
-            ...-e ...@...#egg=version_pkg-branch_name_with_slash...
+            ...-e ...@...#egg=version_pkg
             ...
         """
     ).strip()
@@ -167,7 +167,7 @@ def test_freeze_git_clone_srcdir(script, tmpdir):
     result = script.pip('freeze', expect_stderr=True)
     expected = textwrap.dedent(
         """
-            ...-e git+...#egg=version_pkg-master&subdirectory=subdir
+            ...-e git+...#egg=version_pkg&subdirectory=subdir
             ...
         """
     ).strip()
@@ -180,7 +180,7 @@ def test_freeze_git_clone_srcdir(script, tmpdir):
     expected = textwrap.dedent(
         """
             -f %(repo)s#egg=pip_test_package...
-            -e git+...#egg=version_pkg-master&subdirectory=subdir
+            -e git+...#egg=version_pkg&subdirectory=subdir
             ...
         """ % {'repo': repo_dir},
     ).strip()
@@ -209,7 +209,7 @@ def test_freeze_mercurial_clone(script, tmpdir):
     result = script.pip('freeze', expect_stderr=True)
     expected = textwrap.dedent(
         """
-            ...-e hg+...#egg=version_pkg-dev
+            ...-e hg+...#egg=version_pkg
             ...
         """
     ).strip()
@@ -222,7 +222,7 @@ def test_freeze_mercurial_clone(script, tmpdir):
     expected = textwrap.dedent(
         """
             -f %(repo)s#egg=pip_test_package...
-            ...-e hg+...#egg=version_pkg-dev
+            ...-e hg+...#egg=version_pkg
             ...
         """ % {'repo': repo_dir},
     ).strip()
@@ -250,7 +250,7 @@ def test_freeze_bazaar_clone(script, tmpdir):
     )
     result = script.pip('freeze', expect_stderr=True)
     expected = textwrap.dedent("""\
-        ...-e bzr+file://...@1#egg=version_pkg-0.1-...
+        ...-e bzr+file://...@1#egg=version_pkg
         ...""")
     _check_output(result.stdout, expected)
 
@@ -261,7 +261,7 @@ def test_freeze_bazaar_clone(script, tmpdir):
     )
     expected = textwrap.dedent("""\
         -f %(repo)s/#egg=django-wikiapp
-        ...-e bzr+file://...@...#egg=version_pkg-...
+        ...-e bzr+file://...@...#egg=version_pkg
         ...""" % {'repo': checkout_path})
     _check_output(result.stdout, expected)
 
